# pipelines

./: .cloudbuild.yaml  Dockerfile.ubuntu-curl  WORKSPACE  cloudbuild_ci.yaml  curl.bash  go.mod  go.sum  sequ.yaml
backend/: Dockerfile  Dockerfile.my
backend/api/: pipeline.proto
backend/api/go_client/: auth.pb.go  error.pb.go  experiment.pb.go  filter.pb.go  job.pb.go  parameter.pb.go  pipeline.pb.go  pipeline.pb.gw.go  pipeline_spec.pb.go  report.pb.go  resource_reference.pb.go  run.pb.go  visualization.pb.go
backend/api/swagger/: job.swagger.json  kfp_api_single_file.swagger.json  pipeline.swagger.json  pipeline.upload.swagger.json  run.swagger.json
backend/src/apiserver/: BUILD.bazel  main.go
backend/src/apiserver/list/: BUILD.bazel  list.go  list_test.go  options.go  options_test.go  token.go  token_test.go
backend/test/integration/: experiment_api_test.go
components/: third_party_licenses.csv
components/arena/docker/: Dockerfile
experiment/ci/hello-world/: .cloudbuild.yaml  pipeline.py
experiment/ci/resnet-cmle/: .cloudbuild.yaml  README.md  resnet-train-pipeline.py  run_pipeline.sh
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  tslint.json
frontend/server/: tslint.json
frontend/src/components/: CustomTable.tsx  Router.tsx  Toolbar.tsx
frontend/src/lib/: Apis.ts  Buttons.ts  OutputArtifactLoader.ts  RunUtils.ts
sdk/python/: requirements.txt  setup.py
test/frontend-integration-test/: key_file.json  package-lock.json  package.json  run_test.sh  wdio.conf.js
tools/benchmarks/: run_service_api.ipynb
(+143 files in other folders)
