load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["list.go"],
    importpath = "github.com/kubeflow/pipelines/backend/src/apiserver/list",
    visibility = ["//visibility:public"],
    # deps = [
    #     "//backend/api:go_default_library",
    #     "//backend/src/apiserver/common:go_default_library",
    #     "//backend/src/apiserver/filter:go_default_library",
    #     "//backend/src/apiserver/model:go_default_library",
    #     "//backend/src/common/util:go_default_library",
    # ],
)
